@@ -1,6 +1,5 @@
-
 name = Media: YouTube
-description = Provides YouTube support to the Media module.
+description = Provides YouTube support for File Entity and the Media module.
 package = "Media"
 core = 7.x
 files[] = media_youtube.module
