@@ -113,3 +113,47 @@ function media_youtube_update_7012() {
 function media_youtube_update_7200() {
   return array();
 }
+
+/**
+ * Clean up file display formatters and migrate settings.
+ */
+function media_youtube_update_7201() {
+
+  // Get view modes.
+  $video_view_modes = field_view_mode_settings('file', "video");
+  $video_view_modes['default'] = array('custom_settings' => TRUE);
+  foreach ($video_view_modes as $view_mode => $custom_settings) {
+
+    $formatters = file_displays_load('video', $view_mode);
+    $formatter = 'video__' . $view_mode . '__media_youtube_video';
+
+    if (isset($formatters[$formatter])) {
+
+      // Migrate chromeless=1 or controls='0' to autohide=1, showinfo=0.
+      if (isset($formatters[$formatter]->settings['chromeless'])) {
+        if ($formatters[$formatter]->settings['chromeless'] == 1) {
+          $formatters[$formatter]->settings['autohide'] = 1;
+          $formatters[$formatter]->settings['showinfo'] = 0;
+        }
+      }
+      if (isset($formatters[$formatter]->settings['controls'])) {
+        if ($formatters[$formatter]->settings['controls'] == 0) {
+          $formatters[$formatter]->settings['autohide'] = 1;
+          $formatters[$formatter]->settings['showinfo'] = 0;
+        }
+      }
+
+      // Remove deprecated settings from the exportable array.
+      foreach (array('version', 'fullscreen', 'hd', 'showsearch', 'controls', 'chromeless') as $deprecated) {
+        if (isset($formatters[$formatter]->settings[$deprecated])) {
+          unset($formatters[$formatter]->settings[$deprecated]);
+        }
+      }
+
+      // Save the ctools objects
+      $display = $formatters[$formatter];
+      file_display_save((object) $display);
+    }
+  }
+  return array();
+}
